--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,33 @@
 name: Deploy to VPS
 
-# 1. Define the event that triggers the workflow
 on:
   push:
     branches:
       - main  # Trigger the workflow only on pushes to the main branch
 
-# 2. Define the jobs
 jobs:
   deploy:
     runs-on: ubuntu-latest  # The type of runner to execute the job
 
     steps:
-      # 2.1 Checkout the repository code
+      # 1. Checkout the repository code
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Fetch all history for all branches
 
-      # 2.2 Set up Docker Buildx
+      # 2. Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 2.3 Log in to Docker Hub
+      # 3. Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 2.4 Build and push frontend Docker image
+      # 4. Build and push frontend Docker image
       - name: Build and push frontend image
         uses: docker/build-push-action@v3
         with:
@@ -37,7 +35,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
-      # 2.5 Build and push backend Docker image
+      # 5. Build and push backend Docker image
       - name: Build and push backend image
         uses: docker/build-push-action@v3
         with:
@@ -45,21 +43,21 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
-      # 2.6 Add GitHub.com SSH Key to Known Hosts
+      # 6. Add GitHub.com SSH Key to Known Hosts
       - name: Add GitHub.com SSH Key to Known Hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H github.com >> ~/.ssh/known_hosts
 
-      # 2.7 Add VPS SSH Host Key to Known Hosts
+      # 7. Add VPS SSH Host Key to Known Hosts
       - name: Add VPS SSH Host Key to Known Hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.VPS_IP }} >> ~/.ssh/known_hosts
 
-      # 2.8 Deploy to VPS using SSH
+      # 8. Deploy to VPS using SSH
       - name: Deploy to VPS
-        uses: appleboy/ssh-action@v0.1.11  # Use a specific stable version
+        uses: appleboy/ssh-action@v0.1.4  # Use a specific stable version
         with:
           host: ${{ secrets.VPS_IP }}
           username: ${{ secrets.VPS_USER }}
@@ -69,51 +67,24 @@ jobs:
             #!/bin/bash
             set -e  # Exit immediately if a command exits with a non-zero status
 
-            # Define project directory
-            PROJECT_DIR="/home/${{ secrets.VPS_USER }}/websites/test-app"
+            # Navigate to the project directory
+            cd /home/${{ secrets.VPS_USER }}/websites/test-app || exit
 
-            # Navigate to the websites directory
-            cd /home/${{ secrets.VPS_USER }}/websites || exit
+              # Ensure deploy.sh exists
+              if [ ! -f "./deploy/deploy.sh" ]; then
+                echo "deploy.sh not found. Copying it over..."
+                
+                # Assuming you have the local `deploy.sh` accessible via scp
+                scp -i ${{ secrets.SSH_KEY }} -P 22 /users/${{ serects.VPS_USER}}/projects/tests/deply/deploy.sh ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/home/${{ secrets.VPS_USER }}/websites/test-app/deploy/
+                
+                # Verify the file was copied successfully
+                if [ ! -f "./deploy/deploy.sh" ]; then
+                  echo "Failed to copy deploy.sh. Exiting."
+                  exit 1
+                fi
+              fi
 
-            # Check if the project directory exists
-            if [ ! -d "test-app" ]; then
-              echo "Project directory does not exist. Cloning the repository..."
-              git clone -b main git@github.com:Steadyx/test-app.git test-app
-            else
-              echo "Project directory exists. Pulling the latest changes from main..."
-              cd test-app
-              git fetch origin main
-              git reset --hard origin/main
-            fi
-
-            cd "$PROJECT_DIR"
-
-            # Ensure docker-compose.prod.yml exists
-            if [ ! -f docker-compose.prod.yml ]; then
-              echo "docker-compose.prod.yml not found in the repository. Exiting."
-              exit 1
-            fi
-
-            # Remove the existing Docker stack to allow for a new deployment
-            echo "Removing existing Docker stack..."
-            docker stack rm test-app || echo "No existing stack to remove."
-            sleep 10  # Wait for the removal to complete
-
-            # Remove network only if it exists
-            if docker network ls | grep -q "test-app_default"; then
-              echo "Network exists, removing it..."
-              docker network rm test-app_default || echo "Network already removed or doesn't exist."
-              sleep 5  # Wait for the removal of the network
-            fi
-
-            # Deploy the new stack to Docker
-            echo "Deploying the Docker stack..."
-            docker stack deploy -c docker-compose.prod.yml test-app
-
-            # Optionally, verify that services are running
-            echo "Verifying service deployment..."
-            docker stack services test-app
-
-            # Optionally, inspect frontend logs for any immediate errors
-            echo "Checking Frontend logs..."
-            docker service logs test-app_frontend --tail 100
+              # Make deploy.sh executable
+              chmod +x ./deploy/deploy.sh
+            # Execute the deployment script
+            ./deploy/deploy.sh
