--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80 default_server;
-    server_name edward-codes.com;
+    listen 80;
+    server_name edward-codes.com www.edward-codes.com;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -8,4 +8,8 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+
+    # Logging
+    access_log /var/log/nginx/edward-codes_access.log;
+    error_log /var/log/nginx/edward-codes_error.log;
 }
