--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,9 +70,9 @@ jobs:
             sleep 10  # Wait for the removal to complete
 
             # Remove network only if it exists
-            if docker network ls | grep -q "test-app_default"; then
+            if docker network ls | grep -q "test-app_test-app_default"; then
               echo "Network exists, removing it..."
-              docker network rm test-app_default || echo "Network already removed or doesn't exist."
+              docker network rm test-app_test-app_default || echo "Network already removed or doesn't exist."
               sleep 5  # Wait for the removal of the network
             fi
 
